Fix various spacing and alignment issues in UI layouts (#585)
* Eng 1818 Fix margins spacing on workflows and data page (#588)

--- a/src/ui/common/src/components/layouts/menu-sidebar-styles.module.css
+++ b/src/ui/common/src/components/layouts/menu-sidebar-styles.module.css
@@ -1,12 +1,9 @@
 .menu-sidebar {
-  max-width: 64px;
-  width: 64px;
-  height: 99%;
+  max-width: 80px;
+  width: 80px;
+  height: 100%;
   max-height: 100vh;
-  padding-top: 8px;
   padding-bottom: 8px;
-  padding-left: 8px;
-  padding-right: 8px;
   display: flex;
   flex-direction: column;
   background-color: #002f5e; /* theme.colors.blue900 */
@@ -14,11 +11,21 @@
   z-index: 1;
 }
 
-.menu-sidebar-links {
+.menu-sidebar-content {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   width: '100%';
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.menu-sidebar-footer {
+  display: flex;
+  flex-direction: column;
+  width: '100%';
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .menu-sidebar-links-wrapper {
@@ -31,6 +38,20 @@
   min-width: 64px;
   width: 64px;
   max-width: 64px;
+}
+
+.menu-sidebar-logo-link {
+  /* contains logo of size 48px */
+  width: 48px;
+  height: 48px;
+  /* ensures border width is 80px, which maps sidebar */
+  padding-left: 16px;
+  padding-right: 16px;
+
+  /* ensures height is 64px, which maps navbar */
+  padding-top: 8px;
+  padding-bottom: 6px;
+  border-bottom: 2px solid #E6E8F0;
 }
 
 .menu-sidebar-icon {
